@@ -336,6 +336,10 @@
       \item The deparser now wraps sub expressions such as \code{if(A) .. }
       with parentheses when needed; thanks to Duncan Murdoch's \PR{18232}
       and Lionel Henry's patch there.
+
+      \item \code{remove.packages()} no longer tries to uninstall priority
+      \code{base} packages, thanks to a report and suggestions by Colin Fay
+      in \PR{18227}.
     }
   }
 }
